fix search results on mobile

--- a/app/styles/_search-input.scss
+++ b/app/styles/_search-input.scss
@@ -138,10 +138,10 @@ $dropdown-min-width-large: 600px;
 
 .ds-dropdown-results {
   z-index: 10;
-
   a {
     color: #000000;
   }
+  margin-right: 24px;
 }
 // Main autocomplete wrapper
 .ds-dropdown-menu {
